<resources>
    <string name="app_name">2048</string>
    <string name="new_game">New Game</string>
    <string name="best">Best</string>
    <string name="score">Score</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="saved_high_score_key">saved_high_score_key</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again</string>
    <string name="keep_going">Keep going</string>
    <string name="you_win">You win!</string>
</resources>