<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.fabinpaul.play2048.ui.game.GameViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                app:menu="@menu/menu_game"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
                app:title="@string/app_name" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.game.GameActivity">

            <LinearLayout
                android:id="@+id/llHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_rect_solid_primary"
                android:gravity="center"
                android:minWidth="100dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHighScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.highScore)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="3020" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/shape_rect_solid_primary"
                android:gravity="center"
                android:minWidth="60dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/llHighScore"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(viewModel.currentScore)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="3020" />
            </LinearLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/glGameGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape_rect_solid_primary"
                android:padding="4dp"
                app:columnCount="@{viewModel.gameGrid.size}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llHighScore"
                app:layout_constraintVertical_bias="0.0"
                app:rowCount="@{viewModel.gameGrid.size}" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clGameOver"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/very_light_blue_de"
                android:visibility="@{viewModel.hasLost ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/glGameGrid"
                app:layout_constraintEnd_toEndOf="@+id/glGameGrid"
                app:layout_constraintStart_toStartOf="@+id/glGameGrid"
                app:layout_constraintTop_toTopOf="@+id/glGameGrid"
                tools:visibility="gone">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvGameOver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/game_over"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{() -> viewModel.newGame()}"
                    android:text="@string/try_again"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGameOver" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clGameWon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/very_light_blue_de"
                android:visibility="@{viewModel.hasWon ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/glGameGrid"
                app:layout_constraintEnd_toEndOf="@+id/glGameGrid"
                app:layout_constraintStart_toStartOf="@+id/glGameGrid"
                app:layout_constraintTop_toTopOf="@+id/glGameGrid"
                tools:visibility="gone">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvGameWon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/you_win"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{() -> viewModel.keepGoing()}"
                    android:text="@string/keep_going"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGameWon" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{() -> viewModel.newGame()}"
                    android:text="@string/try_again"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tvGameWon" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.onUpBtnClick()}"
                android:text="@string/up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glGameGrid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="@{() -> viewModel.onDownBtnClick()}"
                android:text="@string/down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.onLeftBtnClick()}"
                android:text="@string/left"
                app:layout_constraintBottom_toBottomOf="@+id/btnDown"
                app:layout_constraintEnd_toStartOf="@+id/btnDown"
                app:layout_constraintTop_toTopOf="@+id/btnUp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{() -> viewModel.onRightBtnClick()}"
                android:text="@string/right"
                app:layout_constraintBottom_toBottomOf="@+id/btnDown"
                app:layout_constraintStart_toEndOf="@+id/btnUp"
                app:layout_constraintTop_toTopOf="@+id/btnUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>